# stellar-crowdFunding

./: README.md
crowdfund/: package-lock.json  package.json  vite.config.ts
crowdfund/app/: app.css  routes.ts
crowdfund/app/components/: header.tsx
crowdfund/app/hooks/: use-submit-transaction.ts
crowdfund/app/routes/: home.tsx
my-token-project/: create_args.json
my-token-project/contracts/crowdfunding/: Cargo.toml
my-token-project/contracts/crowdfunding/src/: lib.rs  test.rs
my-token-project/contracts/crowdfunding/test_snapshots/test/: test_create_campaign.1.json  test_create_campaign_zero_goal.1.json  test_create_multiple_campaigns.1.json  test_donate_after_deadline.1.json  test_donate_success.1.json  test_donate_zero_amount.1.json  test_get_donation_no_donation.1.json  test_get_progress_percentage.1.json  test_interact_with_nonexistent_campaign.1.json  test_is_ended.1.json  test_is_goal_reached.1.json  test_refund_before_deadline.1.json  test_refund_no_donation.1.json  test_refund_success.1.json  test_refund_twice.1.json  test_refund_when_goal_reached.1.json
my-token-project/contracts/token/src/: lib.rs  test.rs
my-token-project/contracts/token/test_snapshots/test/: test_get_token_info.1.json  test_initialize_token.1.json  test_transfer.1.json
